[package]
name = "toy_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
inquire = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusty-leveldb = "3.0"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = "0.6"